--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "reddit-clone",
   "version": "0.1.0",
   "private": true,
+  "overrides": {
+    "@babel/types": "7.27.7"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -11,10 +14,18 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.23.2",
+    "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@sanity/client": "^7.6.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.96.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "groq": "^3.96.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "next-sanity": "^9.12.0",
